@@ -1,5 +1,12 @@
 2007-07-28  Denis Washington  <denisw@svn.gnome.org>
 
+	* gnome-theme-info.h:
+	* gnome-theme-info.c: (look_in_cursor_theme),
+	(gnome_theme_cursor_info_free):
+	Read a cursor theme's name from it's index.theme file if it has one.
+
+2007-07-28  Denis Washington  <denisw@svn.gnome.org>
+
 	* gnome-theme-info.c: (read_icon_theme):
 	Prevent cursor themes from being recognized as icon themes.
 
