@@ -1,3 +1,8 @@
+2007-07-28  Denis Washington  <denisw@svn.gnome.org>
+
+	* appearance-style.c: (prepare_list):
+	Show readable_name in cursor theme list instead of name.
+
 2007-07-28  Thomas Wood  <thos@gnome.org>
 
 	* wp-cellrenderer.c: (cell_renderer_wallpaper_render): Don't draw the
